# MQSMaster

./: .coverage  .dockerignore  .gitattributes  .gitignore  CICD.md  Dockerfile  README.md  build_docker.sh  coverage.json  main.py  main_backtest.py  mqs_bot.sh  pnl_script.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  start.sh  start_sentiment.sh  visualize_backtests.ipynb
.github/: README.MD
Backtest/: executor.py  multiTickerexecutor.py  reporting.py  runner.py  singleTickerexecutor.py  utils.py
NLP/: README.md  agenticwrapper.py  alpha_test.py  automatearticles.py  fetch_alt_articles.py  fetch_articles.py  finviz_news.py  model.ipynb  news_scraper.py  process_sentiment_pipeline.py  scraper_config.json  scraper_daemon.sh  sentiment_processor.py  test_pipeline.py  update_database.py  visualise_NLP.ipynb  visualise_base.ipynb  visualise_wrappertextblob.ipynb  visualize_NLP.ipynb  visualize_wrapper(Work IN Progress).ipynb  yahoo_news.py
RBP/: fetch_data.py  rbp.py  setup.ipynb
engines/: README.md  backtest_engine.py  daily_allocator.py  manage_capital.py  run_engine.py
portfolios/: common.py  portfolio_manager_config.json
scripts/: 20250717_121233_backtest_1  analyze_backtest.py  check_path.py  check_per_file_coverage.py  read_backtest.py
src/: main.py  main_backtest.py  visualize_backtests.ipynb
tests/: conftest.py  test_api_endpoints.py  test_backtest.py  test_relative_momentum_index.py  test_strategy_api.py  test_trade_executor.py  tests_samp.py
workflows/: README.md  backtest-flow.md  capital-management.md  data-pipeline.md  (+4 more)
(+114 files in other folders)
